syntax = "proto3";

package NYP.NClient.NApi.NProto;

import "yt/core/yson/proto/protobuf_interop.proto";

import "yp/client/api/proto/conditions.proto";
import "yp/client/api/proto/data_model.proto";
import "yp/client/api/proto/deploy.proto";

option python_package = "yp_proto.yp.client.api.proto";

option go_package = "a.yandex-team.ru/yp/go/proto/api";

option java_package = "ru.yandex.yp.client.api";
option java_outer_classname = "MultiClusterReplicaSet";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////

option (NYP.NClient.NApi.NProto.object_type) = {
    camel_case_name: "MultiClusterReplicaSet"
    snake_case_name: "multi_cluster_replica_set"
    human_readable_name: "multi-cluster replica set"
    type_value: 16
};

message TMultiClusterReplicaSetSpec
{
    uint64 revision = 6 [(NYP.NClient.NApi.NProto.etc) = true];
    string account_id = 2;

    TPodTemplateSpec pod_template_spec = 3 [(NYP.NClient.NApi.NProto.etc) = true];

    message TConstraints
    {
        repeated NYP.NClient.NApi.NProto.TAntiaffinityConstraint antiaffinity_constraints = 1;
    }

    message TDeploymentStrategy
    {
        uint32 max_unavailable = 1;
    }

    TDeploymentStrategy deployment_strategy = 4 [(NYP.NClient.NApi.NProto.etc) = true];

    message TReplicaSetSpecPreferences
    {
        uint32 replica_count = 1;
        TConstraints constraints = 2;
    }

    message TClusterReplicaSetSpecPreferences
    {
        string cluster = 1;
        TReplicaSetSpecPreferences spec = 2;
    }

    repeated TClusterReplicaSetSpecPreferences clusters = 5 [(NYP.NClient.NApi.NProto.etc) = true];
    string node_segment_id = 7;
}

message TMultiClusterDeployStatus
{
    NYP.NClient.NApi.NProto.TDeployStatusDetails details = 1;
    uint64 pods_unavailable = 2;
}

message TMultiClusterReplicaSetStatus
{
    // Deprecated fields start here. They will be removed after moving to
    // new MultiClusterReplicaSetStatus schema.

    message TControllerAttempt
    {
        map<string, NYP.NClient.NApi.NProto.TCondition> clusters_succeeded = 4 [(NYT.NYson.NProto.yson_map) = true];
        NYP.NClient.NApi.NProto.TCondition multi_cluster_succeeded = 5;
    }

    message TControllerStatus
    {
        TControllerAttempt last_attempt = 1;
    }

    message TPodsSummary
    {
       TDeployProgress multi_cluster_progress = 1;
       map<string, TDeployProgress> clusters_progress = 2 [(NYT.NYson.NProto.yson_map) = true];
    }

    TPodsSummary total_summary = 6;
    TPodsSummary current_revision_summary = 7;
    map<uint64, TPodsSummary> revisions = 8;
    TControllerStatus controller_status = 9;
    uint32 pods_unavailable = 10;

    // New MultiClusterReplicaSetStatus schema starts here.

    uint64 revision = 3;
    NYP.NClient.NApi.NProto.TCondition in_progress = 4;
    NYP.NClient.NApi.NProto.TCondition ready = 5;
    TMultiClusterDeployStatus multi_cluster_deploy_status = 11;
    map<string, NYP.NClient.NApi.NProto.TClusterDeployStatus> cluster_deploy_statuses = 12;
}

////////////////////////////////////////////////////////////////////////////////
